# nle-language-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: lint_cc.yml  lint_cpp.yml  lint_python.yml  run_tests.yml
nle_language_wrapper/: __init__.py
nle_language_wrapper/agents/sample_factory/: common.py  enjoy.py  env.py  language_encoder.py  train.py
nle_language_wrapper/scripts/: play.py
nle_language_wrapper/tests/: conftest.py  test_nle_language_wrapper.py  test_utils.py  test_wrapper_menu.py
nle_language_wrapper/wrappers/: nle_language_wrapper.py
src/: main.cpp
train_dir/nle_language_agent/: cfg.json  git.diff
train_dir/nle_language_agent/.summary/0/: events.out.tfevents.1660566034.ngoodger-desktop  events.out.tfevents.1660603906.ngoodger-desktop
