[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
)/
'''

[tool.isort]
force_single_line = true
profile = "black"
known_third_party = ["nle"]


[tool.pylint.messages_control]
max-line-length = 88
generated-members="torch.*"
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "import-error",
  "no-name-in-module",
  "redefined-outer-name",
  "protected-access",
  "wrong-import-order"
  ]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
